# pair_programming2023

./: CMakeLists.txt  README.md  data.txt  main.cpp  main.py  qss.py  resources.py  tools.py
MyUIWidget/: APIWidget.py  ContentWindow.py  ControllerWindow.py  EditorWidget.py  ImportExportWindow.py  LogWidget.py  MainWindow.py  NumberBar.py  ParamWidget.py  RunBar.py  TextWindow.py
algorithm/: Algorithm.h  Cycle.cpp  Cycle.h  NoCycle.cpp  NoCycle.h  Solver.cpp  Solver.h  Word.cpp  Word.h
guibin/: ui.txt
input/: Scanner.cpp  Scanner.h
src/: CMakeLists.txt  data.txt  your_aim.cpp  your_aim.h
src/UI/: main.py  main.spec  order.py  qrc.py  qss.py  resources.py  tools.py  work.py
src/UI/MyUIWidget/: APIWidget.py  ControllerWindow.py  Editor.py  EditorWidget.py  ImportExportWindow.py  LogWidget.py  MenuBar.py  MiddelLabel.py  ParamWidget.py  RunBar.py  TextWindow.py
src/algorithm/: Cycle.cpp  NoCycle.h  Solver.cpp  Solver.h
src/core/: CMakeLists.txt  library.cpp  library.h  main.cpp
src/core/algorithm/: Algorithm.h  Cycle.cpp  Cycle.h  NoCycle.cpp  NoCycle.h  Solver.cpp  Solver.h
src/core/algorithm/optimize/: Edge.cpp  Edge.h  Global.cpp  Global.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Solver.cpp  Solver.h
src/core/error/: Error.cpp  MyError.cpp  MyError.h
src/core/exception/: CommandException.cpp  CommandException.h  FileException.h  RuntimeException.cpp
src/core/tools/: Char2Pos.cpp  Char2Pos.h  JudgeChar.cpp  JudgeChar.h
src/core/var/: Global.cpp  Global.h  Graph.cpp  Information.h
src/core_old/: library.cpp  main.cpp
src/core_old/algorithm/: Cycle.cpp  Cycle.h  NoCycle.h  Solver.h
src/core_old/error/: MyError.cpp
src/core_old/var/: Global.cpp  Parameter.cpp
src/error/: Error.cpp  Error.h
src/exe/: CMakeLists.txt  main.cpp
src/exe/error/: Error.cpp  Error.h
src/exe/exception/: CommandException.cpp  CommandException.h  FileException.cpp  Information.h  RuntimeException.h
src/exe/input/: Scanner.cpp  Scanner.h
src/input/: Scanner.cpp
src/main_project/: main_project.vcxproj  main_project.vcxproj.filters
src/tools/: JudgeChar.h
src/var/: Constant.h  Word.h
test/: main.cpp  pch.cpp  pch.h  test.cpp  test.sln  test.vcxproj  test.vcxproj.filters
test/CpuAnalysis/: CpuAnalysis.sln  CpuAnalysis.vcxproj  CpuAnalysis.vcxproj.filters
test/CpuAnalysisNew/: CpuAnalysisNew.sln  CpuAnalysisNew.vcxproj  CpuAnalysisNew.vcxproj.filters
test/exe/: f.cpp  forTest.h  main.cpp
var/: Graph.cpp  Graph.h  Information.h  Parameter.h  Word.cpp
(+14 files in other folders)
